insertion de fichier html

--- a/Tps/index.html
+++ b/Tps/index.html
@@ -9,7 +9,7 @@
 
 		<title>Accueil | Médiathèque de Disney</title>
 	</head>
-	<body class="container-fluid">
+	<body class="container">
 		<header>
 		
 			<img class="col-xs-2" src="images/Walt-Disney-Logo.png" Alt="Walt Disney Logo">
